@@ -30,9 +30,9 @@ import (
 	"github.com/stretchr/testify/assert"
 	"github.com/stretchr/testify/require"
 	"go.uber.org/multierr"
-	pkgerrors "go.uber.org/yarpc/pkg/errors"
 	"go.uber.org/yarpc/v2"
 	"go.uber.org/yarpc/v2/internal/clientconfig"
+	"go.uber.org/yarpc/v2/yarpcerrors"
 	"go.uber.org/yarpc/v2/yarpcjson"
 )
 
@@ -80,7 +80,7 @@ func TestBothResponseError(t *testing.T) {
 				defer cancel()
 				err := client.Call(ctx, "testFoo", &testFooRequest{One: "one", Error: "bar"}, &response)
 
-				assert.Equal(t, pkgerrors.WrapHandlerError(errors.New("bar"), "example", "testFoo"), err)
+				assert.Equal(t, yarpcerrors.WrapHandlerError(errors.New("bar"), "example", "testFoo"), err)
 				if tt.inboundBothResponseError && tt.outboundBothResponseError {
 					assert.Equal(t, "one", response.One)
 				} else {
